--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "package-lock.json": "^1.0.0"
+    "package-lock.json": "^1.0.0",
+    "readline-sync": "^1.4.10"
   },
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.10.0",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "globals": "^15.9.0"
   }
 }
